--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
     <h1>Jurema Faria Porto</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita minima praesentium cum obcaecati voluptatum eveniet corporis at nisi facere ipsa, voluptates, perferendis impedit nesciunt soluta vel tempora ut quisquam eos!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, expedita officia et distinctio quidem iure, veniam odio placeat, ut eum porro! Nisi aspernatur ratione quam mollitia voluptas deserunt voluptatem magnam.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolore eos, iure adipisci a unde nam quam modi ab! Rem magni id et accusantium quisquam error, quae at iusto consequuntur.
+      Mãe querida, você é meu exemplo de amor, dedicação e força. Sua presença em minha vida me inspira a ser uma pessoa melhor todos os dias. Obrigado por seu amor incondicional, apoio e orientação. Eu te amo muito e sou grato por ter você como minha mãe.
     </p>
 		<br>
 		<p>Assinado: Arthur Faria Porto</p>
