Mudando autoria do texto

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       Mãe querida, você é meu exemplo de amor, dedicação e força. Sua presença em minha vida me inspira a ser uma pessoa melhor todos os dias. Obrigado por seu amor incondicional, apoio e orientação. Eu te amo muito e sou grato por ter você como minha mãe.
     </p>
 		<br>
-		<p>Assinado: Arthur Faria Porto</p>
+		<p>Assinado: ChatGPT</p>
   </body>
 </html>
